--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "sample-node",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:http": "nodemon node-http.js",
+    "start:express": "nodemon node-express.js",
+    "start:fastify": "nodemon node-fastify.js"
   },
   "author": "jojitoon",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.3",
+    "fastify": "^4.26.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
